[package]
name = "pcode-rs"
authors = ["Haoyu Xiao <haoyuxiao25@gmail.com>"]
description = "Machine code disassembly and IR translation library for Rust using the excellent SLEIGH library from the Ghidra framework."
readme = "README.md"
repository = "https://github.com/XYlearn/pcode-rs"
version = "0.2.0"
edition = "2021"
license = "BSD-2-Clause"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.39", features = ["serialize"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"], optional = true, default-features = false }
clap-num = { version = "1.2", optional = true, default-features = false }

[build-dependencies]
bindgen = "0.72.1"
cmake = "0.1.57"

[features]
default = []
bins = ["dep:clap", "dep:clap-num"]

[workspace]
members = [".", "xtask"]

[[bin]]
name = "translate"
path = "src/bin/translate.rs"
required-features = ["bins"]