[package]
name = "xtask"
version = "0.1.1"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
walkdir = "2"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

pcode-rs = { path = ".." }
